fix: use consistent color mix value for high contrast dark

--- a/core/src/css/themes/high-contrast-dark.scss
+++ b/core/src/css/themes/high-contrast-dark.scss
@@ -110,7 +110,7 @@ $colors:  (
   /* stylelint-disable-next-line order/order */
   @supports (color: color-mix(in lch, plum, pink)) {
     & ion-toast::part(button) {
-      color: color-mix(in srgb, var(--color) 60%, var(--button-color));
+      color: color-mix(in srgb, var(--color) 67%, var(--button-color));
     }
   }
 
@@ -136,16 +136,6 @@ $colors:  (
     --ion-background-color: var(--ion-color-step-100);
     --ion-toolbar-background: var(--ion-color-step-150);
     --ion-toolbar-border-color: var(--ion-color-step-250);
-  }
-
-  // Toast
-  // --------------------------------------------------
-
-  /* stylelint-disable-next-line order/order */
-  @supports (color: color-mix(in lch, plum, pink)) {
-    & ion-toast::part(button) {
-      color: color-mix(in srgb, var(--color) 67%, var(--button-color));
-    }
   }
 
 }
